# yeast-transcriptomics

./: 01-intro.Rmd  02-methods.Rmd  03-models.Rmd  04-references.Rmd  04-visualizations.Rmd  05-summary.Rmd  LICENSE  README.md  _bookdown.yml  heatmap_data_prep.Rmd  heatmap_data_prep.nb.html  heatmaps.Rmd  heatmaps.nb.html  index.Rmd  packages.bib
_book/: applications.html  final-words.html  index.html  intro.html  literature.html  methods.html  models.html  references.html  search_index.json  suggested-preparatory-lessons.html  visualizations-1.html  visualizations.html
app/: server.R  ui.R
app/data/: go_annotation.csv  limma_grouping_table.csv  stain_meta_grouping.csv  strain_meta.csv  tidy_attributes.csv  umap.csv
code/: 04_differential_expression.R  04_remove_underscores_and_average replicates.Rmd  05_grouping_experiments.R  06_retrieve_specific_GO_terms_for_genes.R  analysis.R  count_zeros.Rmd  diff_expression_function.R  hackseq_workspace_triall_error.Rmd  heatmap_data_prep.Rmd  heatmaps.Rmd  load.R  load_data_fix_metadata_genename.R  looking_at_data.Rmd  setup.R  shiny.R  tidy_tsne.Rmd  tsne_generation.Rmd  umap_generation.Rmd
code/sketches/: check_normalization.Rmd  grouping_experiments.R  looking_at_data.Rmd  remove_one_underscore.Rmd  tidy_conditions_annotation.R
code/sketches/python-code/: pyproject.toml
data/: 01_labelsBP.csv  01_labelsMF.csv  labelsCC.csv  labelsMF.csv  umap.csv
data/01_fixlabels/: labelsBP.csv
data/02_remove_gene/: 02_condition_annotation.csv
data/03_no_uninteresting_genes/: 03_conditions_annotation.csv  03_labelsMF.csv  (+1 more)
(+8 files in other folders)
