[tool.poetry]
name = "umap-example"
version = "0.1.0"
description = ""
authors = ["Matt Emery <matthew.emery44@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
jupyter = "^1.0"
umap-learn = "^0.3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
